--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-Theme: minima
+theme: minima
 title: Welcome to Skytzopolis 
 author: Skytzo1838 Himself...(And people in his head)
 email: Skytzo1838@gmail.com
